--- a/setup.cfg
+++ b/setup.cfg
@@ -19,9 +19,14 @@ classifiers =
 packages = find:
 install_requires =
     beautifulsoup4
+    types-beautifulsoup4
     lxml
+    lxml-stubs
     requests
-
+    types-requests
+packages_data =
+    shindan_cli = py.typed, *.pyi
+python_requires = >= 3.7
 
 [options.entry_points]
 console_scripts =
