--- a/setup.cfg
+++ b/setup.cfg
@@ -17,19 +17,38 @@ classifiers =
 [options]
 packages = find:
 install_requires =
-    beautifulsoup4
-    types-beautifulsoup4
-    lxml
-    lxml-stubs
-    requests
-    types-requests
+    beautifulsoup4>=4.10.0
+    types-beautifulsoup4>=4.10.0
+    lxml>=4.8.0
+    lxml-stubs>=0.3.1
+    requests>=2.27.1
+    types-requests>=2.27.1
 packages_data =
-    shindan_cli = py.typed, *.pyi
+    shindan_cli = py.typed
 python_requires = >= 3.7
 
 [options.entry_points]
 console_scripts =
     shindan = shindan_cli.main:main
 
-[yapf]
-based_on_style = yapf
+[options.extras_require]
+dev =
+    black
+    flake8
+    mypy
+    setuptools>=46.4.0
+    types-setuptools
+
+[isort]
+profile = black
+
+[flake8]
+indent-size = 4
+max-line-length = 88
+extend-ignore = W605
+
+[mypy]
+python_version = 3.9
+show_error_codes = True
+pretty = True
+strict = True
