--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,6 @@
 [metadata]
 name = shindan-cli
-version = attr: shindan_cli.__init__.__version__
+version = attr: shindan_cli.__version__
 description = ShindanMaker (https://shindanmaker.com) CLI
 long_description = file: README.md
 long_description_content_type = text/markdown
