--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,3 +1,74 @@
+# poetry self add poetry-bumpversion
+
 [build-system]
-requires = ["wheel", "setuptools"]
-build-backend = "setuptools.build_meta"
+build-backend = "poetry.core.masonry.api"
+requires = [
+  "poetry-core",
+]
+
+[tool]
+[tool.black]
+line-length = 120
+target-version = ['py39']
+
+[tool.isort]
+profile = "black"
+
+[tool.mypy]
+pretty = true
+python_version = "3.9"
+show_error_codes = true
+strict = true
+
+[tool.ruff]
+select = ["ALL"]
+ignore = ["D211", "D213"]
+line-length = 120
+
+[tool.ruff.mccabe]
+max-complexity = 18
+
+[tool.poetry]
+authors = ["eggplants <w10776e8w@yahoo.co.jp>"]
+classifiers = [
+  "Development Status :: 3 - Alpha",
+  "License :: OSI Approved :: MIT License",
+  "Programming Language :: Python :: 3",
+  "Programming Language :: Python :: 3.7",
+  "Programming Language :: Python :: 3.8",
+  "Programming Language :: Python :: 3.9",
+  "Programming Language :: Python :: 3.10",
+  "Programming Language :: Python :: 3 :: Only"
+]
+description = "ShindanMaker (https://shindanmaker.com) CLI"
+keywords = ["shindanmaker", "cli"]
+name = "shindan_cli"
+packages = [{include = "shindan_cli"}]
+license = "MIT"
+readme = "README.md"
+repository = "https://github.com/eggplants/shindan-cli"
+version = "0.9.0"
+
+[tool.poetry.dependencies]
+python = ">=3.7,<4"
+beautifulsoup4 = "^4.11.2"
+lxml = "^4.9.2"
+requests = "^2.28.2"
+
+
+[tool.poetry.group.dev.dependencies]
+mypy = "^0.991"
+pre-commit = "^2.20.0"
+taskipy = "^1.10.3"
+types-beautifulsoup4 = "^4.11.6.7"
+types-requests = "^2.28.11.14"
+lxml-stubs = "^0.4.0"
+
+[tool.poetry.scripts]
+mbpp = "shindan_cli.main:main"
+
+[tool.poetry_bumpversion.file."shindan_cli/__init__.py"]
+
+[tool.taskipy.tasks]
+lint = "pre-commit run -a"
+profile = "python -m cProfile"
