--- a/pyproject.toml
+++ b/pyproject.toml
@@ -47,7 +47,7 @@ packages = [{include = "shindan_cli"}]
 license = "MIT"
 readme = "README.md"
 repository = "https://github.com/eggplants/shindan-cli"
-version = "0.9.0"
+version = "1.0.0"
 
 [tool.poetry.dependencies]
 python = ">=3.7,<4"
@@ -65,7 +65,7 @@ types-requests = "^2.28.11.14"
 lxml-stubs = "^0.4.0"
 
 [tool.poetry.scripts]
-mbpp = "shindan_cli.main:main"
+shindan = "shindan_cli.main:main"
 
 [tool.poetry_bumpversion.file."shindan_cli/__init__.py"]
 
