--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
+cov.xml
+
 # https://github.com/github/gitignore/blob/master/Python.gitignore
 # Byte-compiled / optimized / DLL files
 __pycache__/
