--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,4 +1,14 @@
 repos:
+- repo: local
+  hooks:
+  - id: test
+    name: test
+    entry: poetry run task test
+    stages:
+    - push
+    language: system
+    pass_filenames: false
+    always_run: true
 - repo: https://github.com/pre-commit/pre-commit-hooks
   rev: v4.4.0
   hooks:
