--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,11 +22,20 @@ strict = true
 
 [tool.ruff]
 select = ["ALL"]
-ignore = ["D203"]
+ignore = [
+  "D203", # 1 blank line required before class docstring
+  "D213", # Multi-line docstring summary should start at the second line
+]
 line-length = 120
 
 [tool.ruff.mccabe]
 max-complexity = 18
+
+[tool.ruff.per-file-ignores]
+"tests/*.py" = [
+  "D",
+  "S101", # Use of assert detected
+]
 
 [tool.poetry]
 authors = ["eggplants <w10776e8w@yahoo.co.jp>"]
@@ -63,6 +72,8 @@ taskipy = "^1.10.3"
 types-beautifulsoup4 = "^4.11.6.7"
 types-requests = "^2.28.11.14"
 lxml-stubs = "^0.4.0"
+pytest = "^7.2.2"
+pytest-cov = "^4.0.0"
 
 [tool.poetry.scripts]
 shindan = "shindan_cli.main:main"
@@ -70,5 +81,8 @@ shindan = "shindan_cli.main:main"
 [tool.poetry_bumpversion.file."shindan_cli/__init__.py"]
 
 [tool.taskipy.tasks]
+setup = "poetry install && pre-commit install -t pre-commit -t pre-push"
+test = "pytest --cov=getjump --cov-report=term"
+"test:ci" = "task test --cov-report=xml:cov.xml"
 lint = "pre-commit run -a"
 profile = "python -m cProfile"
