--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,12 +21,12 @@ show_error_codes = true
 strict = true
 
 [tool.ruff]
-select = ["ALL"]
 ignore = [
   "D203", # 1 blank line required before class docstring
   "D213", # Multi-line docstring summary should start at the second line
 ]
 line-length = 120
+select = ["ALL"]
 
 [tool.ruff.mccabe]
 max-complexity = 18
@@ -47,33 +47,32 @@ classifiers = [
   "Programming Language :: Python :: 3.8",
   "Programming Language :: Python :: 3.9",
   "Programming Language :: Python :: 3.10",
-  "Programming Language :: Python :: 3 :: Only"
+  "Programming Language :: Python :: 3 :: Only",
 ]
 description = "ShindanMaker (https://shindanmaker.com) CLI"
 keywords = ["shindanmaker", "cli"]
+license = "MIT"
 name = "shindan_cli"
 packages = [{include = "shindan_cli"}]
-license = "MIT"
 readme = "README.md"
 repository = "https://github.com/eggplants/shindan-cli"
-version = "1.2.0"
+version = "1.3.0"
 
 [tool.poetry.dependencies]
-python = ">=3.7,<4"
 beautifulsoup4 = "^4.11.2"
 lxml = "^4.9.2"
+python = ">=3.7,<4"
 requests = "^2.28.2"
 
-
 [tool.poetry.group.dev.dependencies]
+lxml-stubs = "^0.4.0"
 mypy = ">=0.991,<1.4"
 pre-commit = "^2.20.0"
+pytest = "^7.2.2"
+pytest-cov = "^4.0.0"
 taskipy = "^1.10.3"
 types-beautifulsoup4 = "^4.11.6.7"
 types-requests = "^2.28.11.14"
-lxml-stubs = "^0.4.0"
-pytest = "^7.2.2"
-pytest-cov = "^4.0.0"
 
 [tool.poetry.scripts]
 shindan = "shindan_cli.main:main"
@@ -81,8 +80,8 @@ shindan = "shindan_cli.main:main"
 [tool.poetry_bumpversion.file."shindan_cli/__init__.py"]
 
 [tool.taskipy.tasks]
+lint = "pre-commit run -a"
+profile = "python -m cProfile"
 setup = "poetry install && pre-commit install -t pre-commit -t pre-push"
 test = "pytest --cov=shindan_cli --cov-report=term"
 "test:ci" = "task test --cov-report=xml:cov.xml"
-lint = "pre-commit run -a"
-profile = "python -m cProfile"
