--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -37,6 +37,7 @@ jobs:
       uses: JRubics/poetry-publish@v2.0
       with:
         pypi_token: ${{ secrets.PYPI_TOKEN }}
+        plugins: poetry-version-plugin
   ghcr:
     needs: release
     runs-on: ubuntu-latest
@@ -61,4 +62,4 @@ jobs:
         tags: ${{ steps.meta.outputs.tags }}
         labels: ${{ steps.meta.outputs.labels }}
         build-args: |
-          VERSION=${{ github.event.release.tag_name }}
+          VERSION=${{ github.ref }}
