--- a/pyproject.toml
+++ b/pyproject.toml
@@ -35,13 +35,13 @@ version = "0"
 [tool.poetry.dependencies]
 beautifulsoup4 = "^4.11.2"
 lxml = ">=4.9.2,<6.0.0"
-python = ">=3.7,<4"
+python = ">=3.9,<4"
 requests = "^2.28.2"
 
 [tool.poetry.group.dev.dependencies]
 lxml-stubs = ">=0.4,<0.6"
-mypy = ">=0.991,<1.5"
-pre-commit = "^2.20.0"
+mypy = "^1.13.0"
+pre-commit = "^4.0.1"
 pytest = "^7.2.2"
 pytest-cov = "^4.0.0"
 taskipy = "^1.10.3"
