--- a/pyproject.toml
+++ b/pyproject.toml
@@ -37,6 +37,7 @@ beautifulsoup4 = "^4.11.2"
 lxml = ">=4.9.2,<6.0.0"
 python = ">=3.9,<4"
 requests = "^2.28.2"
+cloudscraper = "^1.2.71"
 
 [tool.poetry.group.dev.dependencies]
 lxml-stubs = ">=0.4,<0.6"
