--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -34,10 +34,12 @@ jobs:
     - uses: abatilo/actions-poetry@v3
     - run: poetry install --no-interaction
     - name: Test
-      if: ${{ runner.os != 'Linux' }}
+      # if: ${{ runner.os != 'Linux' }}
+      if: true
       run: poetry run task test
     - name: Test & publish code coverage
-      if: ${{ runner.os == 'Linux' && env.CC_TEST_REPORTER_ID != '' }}
+      # if: ${{ runner.os == 'Linux' && env.CC_TEST_REPORTER_ID != '' }}
+      if: false
       uses: paambaati/codeclimate-action@v9.0.0
       with:
         coverageCommand: poetry run task test:ci
