--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,12 +1,10 @@
 [build-system]
-build-backend = "poetry.core.masonry.api"
-requires = [
-  "poetry-core>=2",
-]
+build-backend = "hatchling.build"
+
+requires = [ "hatchling", "uv-dynamic-versioning" ]
 
 [project]
 name = "shindan-cli"
-version = "2.1.0"
 description = "ShindanMaker (https://shindanmaker.com) CLI"
 readme = "README.md"
 keywords = [
@@ -14,9 +12,7 @@ keywords = [
   "shindanmaker",
 ]
 license = { text = "MIT" }
-authors = [
-  { name = "eggplants", email = "w10776e8w@yahoo.co.jp" },
-]
+authors = [ { name = "eggplants", email = "w10776e8w@yahoo.co.jp" } ]
 requires-python = ">=3.9,<4"
 classifiers = [
   "Development Status :: 3 - Alpha",
@@ -29,40 +25,45 @@ classifiers = [
   "Programming Language :: Python :: 3.13",
   "Typing :: Typed",
 ]
+dynamic = [ "version" ]
 dependencies = [
   "beautifulsoup4>=4.12.3,<5",
   "cloudscraper>=1.2.71,<2",
   "lxml>=5.3,<6",
   "requests>=2.32.3,<3",
 ]
+
 urls.Repository = "https://github.com/eggplants/shindan-cli"
 scripts.shindan = "shindan_cli.main:main"
 
-[tool.poetry]
-requires-poetry = ">=2.0"
-packages = [
-  { include = "shindan_cli" },
+[dependency-groups]
+dev = [
+  "lxml-stubs>=0.4,<0.6",
+  "mypy>=1.13,<2",
+  "pre-commit>=4.0.1,<5",
+  "pytest>=7.2.2,<9",
+  "pytest-cov>=4,<7",
+  "taskipy>=1.10.3,<2",
+  "types-beautifulsoup4>=4.11.6.7,<5",
+  "types-requests>=2.28.11.14,<3",
 ]
+docs = [ "pdoc" ]
 
-[tool.poetry.group.dev.dependencies]
-lxml-stubs = ">=0.4,<0.6"
-mypy = "^1.13.0"
-pre-commit = "^4.0.1"
-pytest = ">=7.2.2,<9.0.0"
-pytest-cov = ">=4,<7"
-taskipy = "^1.10.3"
-types-beautifulsoup4 = "^4.11.6.7"
-types-requests = "^2.28.11.14"
+[tool.hatch.version]
+# tool.hatch.version.source is not listed in official schema.
+# https://github.com/ninoseki/uv-dynamic-versioning/issues/21
+source = "uv-dynamic-versioning"
 
-[tool.poetry.requires-plugins]
-poetry-plugin-shell = ">=1.0"
+[tool.hatch.build.targets.sdist]
+include = [ "shindan_cli" ]
 
-[tool.black]
-target-version = [
-  'py39',
-]
+[tool.hatch.build.targets.wheel]
+include = [ "shindan_cli" ]
 
 [tool.ruff]
+line-length = 120
+format.indent-style = "space"
+format.quote-style = "double"
 lint.select = [
   "ALL",
 ]
@@ -81,9 +82,20 @@ python_version = "3.9"
 show_error_codes = true
 strict = true
 
+[tool.uv]
+default-groups = [
+  "dev",
+  "docs",
+]
+
+[tool.uv-dynamic-versioning]
+vcs = "git"
+style = "semver"
+
 [tool.taskipy.tasks]
 lint = "pre-commit run -a"
 profile = "python -m cProfile"
 setup = "poetry install && pre-commit install -t pre-commit -t pre-push"
 test = "pytest --cov=shindan_cli --cov-report=term"
 "test:ci" = "task test --cov-report=xml:cov.xml"
+gendoc = "pdoc shindan_cli -o ./docs --docformat google"
